--- a/V-Cal.html
+++ b/V-Cal.html
@@ -206,7 +206,7 @@
             
             <div class="config-group">
                 <label>API Base URL</label>
-                <input type="text" id="apiBase" value="" placeholder="Leave empty for relative URLs">
+                <input type="text" id="apiBase" value="/api" placeholder="/api for veritastruth.net">
             </div>
             
             <div class="config-group">
