--- a/V-Cal-v3-stress.html
+++ b/V-Cal-v3-stress.html
@@ -356,7 +356,7 @@
                 { id: 'trans-1', claim: 'The United Kingdom is a member of the European Union', expectedReality: [-10, -9], expectedIntegrity: [-0.2, 0.3], category: 'transitions', notes: 'False since Jan 2020 Brexit' },
                 { id: 'trans-2', claim: 'Pluto is classified as a planet in our solar system', expectedReality: [-8, -6], expectedIntegrity: [0.0, 0.5], category: 'transitions', notes: 'Reclassified 2006 - some nuance acceptable' },
                 { id: 'trans-3', claim: 'The Soviet Union exists as a country', expectedReality: [-10, -10], expectedIntegrity: [-0.3, 0.3], category: 'transitions', notes: 'Dissolved 1991 - hard false' },
-                { id: 'trans-4', claim: 'BlackBerry is the leading smartphone manufacturer', expectedReality: [-10, -8], expectedIntegrity: [0.0, 0.5], category: 'transitions', notes: 'Was true ~2009, definitively false now' },
+                { id: 'trans-4', claim: 'BlackBerry manufactures smartphones', expectedReality: [-10, -8], expectedIntegrity: [0.0, 0.5], category: 'transitions', notes: 'Exited hardware business 2016 - binary existence claim' },
             ]
         };
         
