--- a/VERITAS_Interactive_Demo_Web.html
+++ b/VERITAS_Interactive_Demo_Web.html
@@ -3486,7 +3486,7 @@
             <div class="topic-label">Gender<br>Identity</div>
         </div>
 
-        <button class="end-demo-button" onclick="window.location.href='index.html'"><span>End</span><span>Demo</span></button>
+        <button class="end-demo-button" onclick="window.location.href='https://www.veritastruth.net/'"><span>End</span><span>Demo</span></button>
     </div>
 
     <!-- Articles Panels -->
