--- a/documentation.html
+++ b/documentation.html
@@ -819,18 +819,18 @@
 
       <div class="docs-grid">
         <div class="doc-card tool" style="grid-column: span 2;">
-          <div class="doc-type">Standalone Application</div>
-          <div class="doc-title">🔍 VERITAS Veracity Engine v2.8</div>
+          <div class="doc-type">Online Application</div>
+          <div class="doc-title">🔍 VERITAS Veracity Engine</div>
           <div class="doc-description">
-            A standalone truth verification tool that runs on your PC. Pose questions, assess articles, and get rigorous analysis with full transparency. Powered by Claude AI with your own API key.
+            A browser-based truth verification tool—no download or installation required. Pose questions, assess articles, and get rigorous analysis with full transparency. Powered by Claude AI, accessible from any device.
           </div>
-          <div class="doc-status">✓ Ready to Use</div>
+          <div class="doc-status">✓ Live & Continuously Updated</div>
           
           <ul class="feature-list">
             <li><strong>Dual Scoring System:</strong> Reality Score (-10 to +10) measures factual accuracy; Integrity Score (-1.0 to +1.0) measures source honesty</li>
             <li><strong>Two Modes:</strong> Ask any question OR paste an article for assessment</li>
             <li><strong>Warning Flags:</strong> Visual alerts when manipulation patterns are detected—even when facts are true</li>
-            <li><strong>Export Options:</strong> Save as PDF, Print, or Export JSON</li>
+            <li><strong>Always Current:</strong> Online deployment means you always have the latest version with newest features</li>
           </ul>
 
           <div class="highlight-box">
@@ -839,8 +839,7 @@
           </div>
 
           <div class="doc-links">
-            <a href="VERITAS_Standalone_v2.8.zip" class="doc-link green" download>⬇️ Download (ZIP)</a>
-            <a href="VERITAS_Installation_Guide.html" class="doc-link">📖 Installation Guide</a>
+            <a href="assess.html" class="doc-link green">🚀 Try It Now!</a>
           </div>
         </div>
 
