--- a/assess.html
+++ b/assess.html
@@ -117,8 +117,8 @@
         .tagline {
             font-size: 0.7rem;
             color: var(--text-muted);
-            margin-left: 48px; /* Align with V in VERITAS (logo-img width + gap) */
-            margin-top: -2px; /* Moved 4px closer to logo */
+            margin-left: 58px; /* Shifted right ~10px to center under VERITAS LLC text */
+            margin-top: -8px; /* Moved closer up to bottom of logo text */
             letter-spacing: 0.5px;
         }
 
