--- a/assess.html
+++ b/assess.html
@@ -117,8 +117,8 @@
         .tagline {
             font-size: 0.7rem;
             color: var(--text-muted);
-            margin-left: 58px; /* Shifted right ~10px to center under VERITAS LLC text */
-            margin-top: -8px; /* Moved closer up to bottom of logo text */
+            margin-left: 44px; /* Shifted left 4px more */
+            margin-top: -16px; /* Moved up 8px more */
             letter-spacing: 0.5px;
         }
 
