--- a/assess.html
+++ b/assess.html
@@ -117,7 +117,7 @@
         .tagline {
             font-size: 0.7rem;
             color: var(--text-muted);
-            margin-left: 49px; /* Shifted right 5px */
+            margin-left: 53px; /* Shifted right 4px more */
             margin-top: -16px; /* Moved up 8px more */
             letter-spacing: 0.5px;
         }
