--- a/assess.html
+++ b/assess.html
@@ -117,8 +117,8 @@
         .tagline {
             font-size: 0.7rem;
             color: var(--text-muted);
-            margin-left: 53px; /* Shifted right 4px more */
-            margin-top: -16px; /* Moved up 8px more */
+            margin-left: 56px; /* Shifted right 3px more */
+            margin-top: -16px;
             letter-spacing: 0.5px;
         }
 
